Denora v1.5.1-git
-------------
Additions
13/12/09 : Support for Unreal User Mode +I / Channel mode +Z

Changes
13/12/11 : Restructored documentation, added html based documentation

Fixes
13/12/09 : Fixed issue where do_sjoin() did not create the channel before trying to set modes
13/12/02 : Some fixes to compile on Minix (not a 100% yet)
13/11/29 : Cleans out UID struct on user disconnecting
13/11/29 : Checks if server before calling nickisservices()
13/11/27 : Fixed crash when crypt.h is missing but the lib is not

Removals

Developers
Denora Team <dev@denorastats.org>

Denora v1.5.0
-------------

Additions
13/11/22 Exclude now supports wildcard matching.
13/11/15 From command line -v (alias of -version) and -? (alias of -help) been added
13/11/04 Full support for ircu and nefarious channel mode +A/U
13/11/04 ModuleCreateConfigDirective() cleaner way to pass to moduleGetConfigDirective()
13/10/23 Adds m4 directory, the configure files are getting nasty, time to move macros where
         they belong.
13/10/21 Added regex.h to the build, core and modules can now use this to pattern 
         match with regular expressions. 
13/01/13 Added support for ircu's channel mode +R (was missing)

Changes
13/11/22 Removed mypasql.c and mypasql.def neither have been used in a long time.
13/11/22 Removed dmalloc, when actually hooked up correctly denora crashed using it.
13/11/20 base64_decode() removed last parameter of length, was never used.
13/11/18 Not finding mysql_config no longer causes configure to exit on an error, just throw a warning
13/11/15 Denora no longer says "Service not started" if the config file is missing, it gives a
         better error.
13/11/11 Moved do_umode() hack from 1.4.0 to the protocol like it should have been.
13/11/06 denora.sql no longer includes ison table data, all this is move to the ircd based
         sql files to remove extra columns that we will never set on that ircd.