@@ -7,6 +7,7 @@ Changes
 13/12/11 : Restructored documentation, added html based documentation
 
 Fixes
+14/01/02 : Statserv export servers matches StatServ export all server block 
 13/12/09 : Fixed issue where do_sjoin() did not create the channel before trying to set modes
 13/12/02 : Some fixes to compile on Minix (not a 100% yet)
 13/11/29 : Cleans out UID struct on user disconnecting
